feat(install): mod to install files from github

--- a/install
+++ b/install
@@ -2,5 +2,6 @@
 
 chmod -R a+rwx $(pwd)/.git
 mkdir -p "$(pwd)/.git/hooks"
-cp git-conventional-commits.json $(pwd)/git-conventional-commits.json
-cp commit-msg $(pwd)/.git/hooks/commit-msg
+
+curl https://raw.githubusercontent.com/yabe-diverta/enforcing-convensional-commit/git-conventional-commits.json --output $(pwd)/git-conventional-commits.json
+curl https://raw.githubusercontent.com/yabe-diverta/enforcing-convensional-commit/commit-msg --output $(pwd)/.git/hooks/commit-msg
